# Resonance

./: .gitignore  DEVELOPER_GUIDE.md  ETHICS.md  LICENSE  MANIFEST.in  README.md  RESONANCE_STATE.md  ROADMAP.md  add_panel.py  dashboard_final.py  dashboard_new.html  dashboard_new.py  debug_dashboard.py  do_publish.bat  extractor.py  fix_atexit.py  fix_chips.py  fix_chips_emoji.py  fix_chips_html.py  fix_config_box.py  fix_dashboard_data.py  fix_dashboard_eventlet.py  fix_final_panel.py  fix_flask_silent.py  fix_loading_weights.py  fix_model_loader.py  fix_model_path.py  fix_panel_display.py  fix_panel_emoji.py  fix_paths.py  fix_process.py  fix_push.ps1  fix_qdrant_warning.py  fix_storage_init.py  fix_storage_init2.py  fix_suppress_diagnostics.py  install-linux.sh  install-mac.sh  install-win.ps1  pyproject.toml  (+11 more)
.github/workflows/: publish.yml
_archive/: ABBE_email_draft.txt  GIT_PUSH_NOW.vbs  REGISTER_AND_RUN_SCOUT.cmd  START_SCOUT.bat  do_git_push.bat  fix_github_topics.ps1  launch_resonance_scout.ps1  open_scholar_alerts.ps1  patch_loaders.py  prepare_data_v1.py  push_all_files.py  run_git_commit.ps1  run_scout.ps1  run_scout_now.vbs  start_scout_background.ps1  worker.js  wrangler.toml
docs/: BUILD_QUEUE.md  PUBLISH_BRIEF.md
resonance/: __init__.py  comparison.py  config.py  dashboard.py  emoji_lexicon.py  extractor.py  feedback.py  injector.py  model_loader.py  perma_lexicon.py  profile.py  reinforcement.py  sdt_lexicon.py  storage.py  student_model.py  temporal_graph.py  version.py
resonance/model/: config.json  label_map.json  tokenizer.json  tokenizer_config.json
resonance/resonance_data/qdrant/collection/resonance_emotions/: storage.sqlite
resonance/templates/: dashboard.html
resonance_data/qdrant/: meta.json
resonance_data/qdrant/collection/resonance_emotions/: storage.sqlite
resonance_layer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: dataset_scout.py  download_datasets.py  scout_results.md  scout_seen.json  scout_task.xml  train_student.py
