[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resonance-layer"
version = "1.0.34"
description = "Emotional intelligence layer for AI — detects emotion, tracks wellbeing, and gives any LLM the context to respond to how people actually feel."
readme = "README.md"
license = "BUSL-1.1"
authors = [{ name = "William Ferrell" }]
requires-python = ">=3.10"
keywords = ["emotion", "ai", "llm", "affective-computing", "memory", "nlp", "psychology", "wellbeing", "perma", "sdt", "dbt", "mental-health", "emotional-intelligence", "empathy", "window-of-tolerance", "wise-mind", "conversation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "nrclex>=4.0.0",
    "textblob>=0.18.0",
    "empath>=0.89","sentencepiece>=0.1.99",
    "flask>=3.0.0",
    "flask-socketio>=5.3.0","eventlet>=0.33.0",
    "qdrant-client>=1.7.0",
    "surrealdb>=1.0.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "nltk>=3.8.0",
    "huggingface_hub>=0.16.0",
]

[project.optional-dependencies]
voice = [
    "openai-whisper>=20230918",
    "pyaudio>=0.2.13",
]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[project.urls]
Homepage = "https://github.com/wpferrell/Resonance"
Repository = "https://github.com/wpferrell/Resonance"
"Bug Tracker" = "https://github.com/wpferrell/Resonance/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["resonance*"]
exclude = ["tests*", "training*", "*.pyc"]

[tool.setuptools.exclude-package-data]
resonance = ["model_loader.py", "model/*"]

[tool.setuptools.package-data]
resonance = ["templates/*"]





